--- a/MemeMe/Base.lproj/Main.storyboard
+++ b/MemeMe/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MemeMe" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +16,147 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <toolbar clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6TZ-nr-qAP" userLabel="TopToolbar">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="60" id="F0o-1o-JqA"/>
+                                    <constraint firstAttribute="height" constant="60" id="jB7-Lw-HAA"/>
+                                </constraints>
+                                <items>
+                                    <barButtonItem systemItem="action" id="yxN-ax-x38">
+                                        <connections>
+                                            <action selector="shareMeme:" destination="BYZ-38-t0r" id="3we-c2-x77"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="nKa-Yd-UN9"/>
+                                    <barButtonItem title="Cancel" id="8jn-gO-O9J">
+                                        <connections>
+                                            <action selector="cancelMeme:" destination="BYZ-38-t0r" id="niW-wS-etR"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="center" semanticContentAttribute="spatial" translatesAutoresizingMaskIntoConstraints="NO" id="1Wy-AX-Rbi">
+                                <rect key="frame" x="0.0" y="556" width="600" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="4CD-TI-Fs3"/>
+                                </constraints>
+                                <items>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="Fk3-8J-nuq"/>
+                                    <barButtonItem systemItem="camera" id="g8o-Dm-Fuq">
+                                        <connections>
+                                            <action selector="takeAPhoto:" destination="BYZ-38-t0r" id="TwP-2X-PM7"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem width="42" style="plain" systemItem="fixedSpace" id="86r-5c-HbE"/>
+                                    <barButtonItem title="Album" id="k0h-Nw-ArU">
+                                        <connections>
+                                            <action selector="pickAnImageFromGallery:" destination="BYZ-38-t0r" id="c5O-44-qxT"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="RVB-jO-dSi"/>
+                                </items>
+                            </toolbar>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VcW-2g-uUE" userLabel="MemeView">
+                                <rect key="frame" x="0.0" y="60" width="600" height="496"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="35y-0V-Z1F">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="496"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="Ox6-oE-Mx9"/>
+                                            <constraint firstAttribute="width" constant="30" id="eUt-7F-7vT"/>
+                                        </constraints>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="Ox6-oE-Mx9"/>
+                                                <exclude reference="eUt-7F-7vT"/>
+                                            </mask>
+                                        </variation>
+                                    </imageView>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" text="BOTTOM TEXT" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="75o-Z8-bob">
+                                        <rect key="frame" x="20" y="428" width="560" height="60"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="60" id="30u-eS-CwO"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" text="TOP TEXT" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bsh-K8-Jl1">
+                                        <rect key="frame" x="20" y="8" width="560" height="60"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="60" id="INW-Mm-oZs"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
+                                    </textField>
+                                </subviews>
+                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <constraints>
+                                    <constraint firstItem="35y-0V-Z1F" firstAttribute="centerY" secondItem="VcW-2g-uUE" secondAttribute="centerY" id="92C-Kw-5QP"/>
+                                    <constraint firstItem="75o-Z8-bob" firstAttribute="leading" secondItem="VcW-2g-uUE" secondAttribute="leading" constant="20" id="9Ze-Ic-KeD"/>
+                                    <constraint firstItem="35y-0V-Z1F" firstAttribute="leading" secondItem="VcW-2g-uUE" secondAttribute="leading" id="9pZ-QZ-E20"/>
+                                    <constraint firstItem="35y-0V-Z1F" firstAttribute="leading" secondItem="VcW-2g-uUE" secondAttribute="leading" id="OZu-Od-hip"/>
+                                    <constraint firstItem="bsh-K8-Jl1" firstAttribute="top" secondItem="VcW-2g-uUE" secondAttribute="top" constant="8" id="QRW-rH-5y8"/>
+                                    <constraint firstAttribute="bottom" secondItem="35y-0V-Z1F" secondAttribute="bottom" id="RiB-tC-PSZ"/>
+                                    <constraint firstAttribute="trailing" secondItem="bsh-K8-Jl1" secondAttribute="trailing" constant="20" id="U4n-da-vP1"/>
+                                    <constraint firstItem="35y-0V-Z1F" firstAttribute="top" secondItem="VcW-2g-uUE" secondAttribute="top" id="X9S-n7-Z9o"/>
+                                    <constraint firstAttribute="trailing" secondItem="75o-Z8-bob" secondAttribute="trailing" constant="20" id="ZtX-AQ-HPG"/>
+                                    <constraint firstItem="75o-Z8-bob" firstAttribute="trailing" secondItem="bsh-K8-Jl1" secondAttribute="trailing" id="aUz-bA-vPE"/>
+                                    <constraint firstItem="bsh-K8-Jl1" firstAttribute="leading" secondItem="VcW-2g-uUE" secondAttribute="leading" constant="20" id="bgJ-HI-hhh"/>
+                                    <constraint firstAttribute="trailing" secondItem="35y-0V-Z1F" secondAttribute="trailing" id="gYh-BP-QVp"/>
+                                    <constraint firstAttribute="bottom" secondItem="75o-Z8-bob" secondAttribute="bottom" constant="8" id="kle-y4-8fI"/>
+                                    <constraint firstAttribute="trailing" secondItem="bsh-K8-Jl1" secondAttribute="trailing" constant="20" id="mKK-N6-E57"/>
+                                    <constraint firstItem="75o-Z8-bob" firstAttribute="leading" secondItem="bsh-K8-Jl1" secondAttribute="leading" id="oIv-H4-J6m"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="92C-Kw-5QP"/>
+                                        <exclude reference="9pZ-QZ-E20"/>
+                                        <exclude reference="mKK-N6-E57"/>
+                                        <exclude reference="aUz-bA-vPE"/>
+                                        <exclude reference="oIv-H4-J6m"/>
+                                    </mask>
+                                </variation>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="VcW-2g-uUE" firstAttribute="top" secondItem="6TZ-nr-qAP" secondAttribute="bottom" id="2LU-Po-I8n"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="35y-0V-Z1F" secondAttribute="leading" id="3C6-iw-dXK"/>
+                            <constraint firstItem="1Wy-AX-Rbi" firstAttribute="top" secondItem="VcW-2g-uUE" secondAttribute="bottom" id="4gS-AI-3de"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="1Wy-AX-Rbi" secondAttribute="trailing" constant="-20" id="4se-cc-ALz"/>
+                            <constraint firstItem="1Wy-AX-Rbi" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="BBP-Da-p5y"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="35y-0V-Z1F" secondAttribute="trailing" constant="-20" id="HHU-TL-6i4"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="6TZ-nr-qAP" secondAttribute="trailing" constant="-20" id="Mvl-qe-f8g"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="VcW-2g-uUE" secondAttribute="trailing" constant="-20" id="TdD-Jq-z12"/>
+                            <constraint firstItem="6TZ-nr-qAP" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="XlM-cB-tJk"/>
+                            <constraint firstItem="6TZ-nr-qAP" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="dQ9-IL-luj"/>
+                            <constraint firstItem="VcW-2g-uUE" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="eRF-od-JxY"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="VcW-2g-uUE" secondAttribute="bottom" id="p9j-Ps-tOU"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="1Wy-AX-Rbi" secondAttribute="bottom" id="uV8-85-eD7"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="3C6-iw-dXK"/>
+                                <exclude reference="HHU-TL-6i4"/>
+                                <exclude reference="p9j-Ps-tOU"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <connections>
+                        <outlet property="bottomTextField" destination="75o-Z8-bob" id="4Jt-3y-Pwt"/>
+                        <outlet property="cameraButtonItem" destination="g8o-Dm-Fuq" id="Xaa-2p-y4y"/>
+                        <outlet property="frameView" destination="VcW-2g-uUE" id="LkE-aD-qx8"/>
+                        <outlet property="imageView" destination="35y-0V-Z1F" id="BQa-Mr-C7v"/>
+                        <outlet property="shareButtonItem" destination="yxN-ax-x38" id="V7U-VB-27y"/>
+                        <outlet property="topTextField" destination="bsh-K8-Jl1" id="ZVl-mq-vKg"/>
+                        <outlet property="topToolbar" destination="6TZ-nr-qAP" id="x4c-q9-sIK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="389" y="391"/>
         </scene>
     </scenes>
 </document>
