--- a/MemeMe/Base.lproj/LaunchScreen.storyboard
+++ b/MemeMe/Base.lproj/LaunchScreen.storyboard
@@ -15,8 +15,19 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchImage" translatesAutoresizingMaskIntoConstraints="NO" id="qsT-WW-pge">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                            </imageView>
+                        </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="qsT-WW-pge" secondAttribute="bottom" id="DpD-PN-A5O"/>
+                            <constraint firstAttribute="trailing" secondItem="qsT-WW-pge" secondAttribute="trailing" id="Lb2-2c-8Kg"/>
+                            <constraint firstItem="qsT-WW-pge" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" id="fvE-gw-ikZ"/>
+                            <constraint firstItem="qsT-WW-pge" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="wk5-38-m63"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +35,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="LaunchImage" width="768" height="1024"/>
+    </resources>
 </document>
